# voxel-cone-tracing

./: .envrc  .gitignore  Cargo.toml  README.md  benchmarks.ron  broken_octree_build.rs  config-dimension-10.ron  config-dimension-8.ron  config-dimension-9.ron  config.ron  example.config.ron  flake.nix  install-dependencies-manjaro.sh  install-dependencies.sh  notas-demo  test_scene.ron  voxel-cone-tracing.cap
assets/: colored_cow.mtl
crates/cli/: Cargo.toml
crates/cli/src/: cli_arguments.rs  config.rs  main.rs  preset.rs  scene.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/cone_tracing/: debug_cone.rs  mod.rs  voxel_cone_trace.rs
crates/core/src/menu/: mod.rs
crates/core/src/menu/submenus/: all_nodes.rs  bricks.rs  camera.rs  children.rs  cone_tracing.rs  debug_cone_tracing.rs  diagnostics.rs  helpers.rs  images.rs  mod.rs  node_search.rs  photons.rs  picker.rs  save_preset.rs  systems.rs  textures.rs
crates/core/src/octree/: mod.rs  visualize.rs  voxel_data.rs
crates/core/src/octree/lighting/: mod.rs
crates/core/src/octree/lighting/stages/: clear_light.rs  light_transfer.rs  mipmap_centers.rs  mipmap_corners.rs  mipmap_edges.rs  mipmap_faces.rs  mod.rs  photons_to_irradiance.rs  store_photons.rs
crates/core/src/simple_texture/: cone_tracer.rs  debug_cone_tracer.rs  mod.rs  visualizer.rs  voxelizer.rs
crates/core/src/voxelization/: mod.rs  visualize.rs  voxelize.rs  voxelize_to_3d_texture.rs
crates/core/tests/: cone_trace.rs  tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: aabb.rs  asset_registry.rs  atomic_counter.rs  camera.rs  common.rs  cube.rs  decl_macros.rs  enums.rs  framebuffer.rs  helpers.rs  input.rs  kernel.rs  lib.rs  light.rs  macros.rs  material.rs  mesh.rs  model.rs  object.rs  quad.rs  render_loop.rs  scene.rs  shader.rs  submenu.rs  system.rs  test_utils.rs  texture_2d.rs  texture_3d.rs  texture_buffer.rs  time.rs  traits.rs  transform.rs  types.rs  ui.rs  vao.rs
crates/engine/src/kernels/: geometry_buffers.rs  mod.rs  move_camera.rs  render_objects.rs
crates/engine/src/light/: mod.rs  point.rs  spot.rs
crates/engine/src/systems/: geometry_buffers.rs  mod.rs  move_camera.rs  render_objects.rs
presets/: AO.ron  EL-PRESET-DEBUG-CONE.ron  SPONZA-SPECULAR-SLIDER.ron  TEST.ron  cone-tracing-menu.ron  cornel-box-demo.ron  cornell-box-ao-2.ron  cornell-box-ao-3.ron  cornell-box-ao-4.ron  cornell-box-ao-border-test.ron  cornell-box-ao-wall.ron  cornell-box-ao.ron  cornell-box-debug.ron  cornell-box-diffuse-2.ron  cornell-box-diffuse.ron  cornell-box-direct.ron  (+26 more)
(+313 files in other folders)
