[package]
name = "voxel-cone-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
image = "0.24.2"
memoffset = "0.6.5"
tobj = "3.2.2"
c_str_macro = "1.0.3"
structopt = "0.3"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
once_cell = "1.16.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "4.0"
egui_glfw_gl = { git = "https://github.com/cohaereo/egui_glfw_gl", branch = "master" }
