[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Third-party
cgmath = { version = "0.18.0", features = ["serde"] }
gl = "0.14.0"
serde = { version = "1", features = ["derive"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
c_str_macro = "1.0.3"
colored = "2.0.4"
ron = "0.8.0"
once_cell = "1.16.0"

# Local
renderer = { path = "../renderer", features = ["ui"] }
